# developer-blog-admin-cli

./: .gitignore  Cargo.toml  DevBlog.AdminCli.csproj  Program.cs  README.md  devblog-admincli.sln
Dtos/: PublishContentDto.cs  UpdateContentDto.cs
Options/: DeleteOptions.cs  PublishOptions.cs  UpdateOptions.cs
Protos/: content.proto
Services/: AdminContentService.cs  ContentService.cs  IAdminContentService.cs  IContentService.cs
src/: main.rs
